# Python-Projects

./: Adventure_game.ipynb  Ai_chatbot.ipynb  Contact_book.ipynb  Data_Analysis.ipynb  Flight_Reservation_System.ipynb  Guess_what_inside.ipynb  Iris_Flower_Classification_Project.ipynb  Mad_Libs_Generator_Project.ipynb  Personal_Library_Manager.ipynb  README.md  Rock_Paper_Scissors_Game.ipynb  Student_Management.ipynb  Test_Project.ipynb  Tic_Tac_Toe.ipynb  Todo_List.ipynb  hangman_gameipynb.ipynb  palindrome_checker.ipynb  project.ipynb  result_management_system.ipynb
Auto-Attendence/: attendance.csv  auto_attendance_marker.py  pyproject.toml
Growth_Mindset/growth-mindset/: hello.py  pyproject.toml
HOSPITAL MANAGEMENT SYSTEM/hospital-management-system/: main.py  pyproject.toml
Password Strength Checker with FastAPI and Streamlit/pass-stre/: hello.py  pyproject.toml
Quote-Generator/quote-generator/: hello.py  pyproject.toml
Restaurant-Management-System/: main.py  pyproject.toml
Resume Parser/Resume-Parser/: main.py  pyproject.toml
Stock Price Tracker/Stock-Price-Tracker/: main.py  pyproject.toml
University Course Management System/University-Course-Management-System/: main.py  pyproject.toml  university_data.pkl
financial calculator app/Financial_Calculator/: app.py  pyproject.toml
financial calculator app/Financial_Calculator/list/: main.py  pyproject.toml
new-project/: main.py  pyproject.toml  urls.db
social-media/: main.py  pyproject.toml  social_media.db
unit converter/: main.py
weather-forecast/: main.py  pyproject.toml
(+10 files in other folders)
